[gd_scene load_steps=6 format=3 uid="uid://i1rc41yslxsn"]

[ext_resource type="PackedScene" uid="uid://dhuvd3tu2enxw" path="res://scenes/enemies/enemy_base.tscn" id="1_45ln2"]
[ext_resource type="Texture2D" uid="uid://df3mpqdcmwcm4" path="res://assets/graphics/enemies/silken_infected_spider.png" id="1_tkcy4"]
[ext_resource type="Script" path="res://src/enemies/infected_spider/infected_spider.gd" id="2_nhxqn"]
[ext_resource type="Script" path="res://src/enemies/infected_spider/attack_comp.gd" id="3_e0hrq"]
[ext_resource type="Script" path="res://src/enemies/infected_spider/states/attack_alert.gd" id="3_ukpfj"]

[node name="infected_spider" instance=ExtResource("1_45ln2")]
script = ExtResource("2_nhxqn")

[node name="player_body" type="Sprite2D" parent="." index="1"]
scale = Vector2(0.18, 0.18)
texture = ExtResource("1_tkcy4")
hframes = 4
vframes = 3
frame = 2

[node name="player_head" type="Sprite2D" parent="." index="2"]
scale = Vector2(0.18, 0.18)
texture = ExtResource("1_tkcy4")
offset = Vector2(-150, -125)
hframes = 4
vframes = 3

[node name="attack_comp" parent="." index="4"]
script = ExtResource("3_e0hrq")

[node name="attack_alert" parent="attack_machine" index="0"]
script = ExtResource("3_ukpfj")

[node name="animation_head" type="AnimationPlayer" parent="." index="7"]

[node name="animation_body" type="AnimationPlayer" parent="." index="8"]
